# project-L-player

./: Makefile  README.md  ai.py  cli.py  compute_actions.py  game_adapter.py  main.py  piece.py  projectl.py  projectl_old.py  puzzle.py  pyproject.toml  server.py
models/: brain_0.pkl  brain_100.pkl  brain_14.pkl  brain_16.pkl  brain_17.pkl  brain_19.pkl  brain_20.pkl  brain_21.pkl  brain_23.pkl  brain_25.pkl  brain_26.pkl  brain_27.pkl  brain_29.pkl  brain_31.pkl  brain_32.pkl  brain_33.pkl  brain_35.pkl  brain_36.pkl  brain_37.pkl  brain_39.pkl  brain_42.pkl  brain_45.pkl  brain_46.pkl  brain_48.pkl  brain_53.pkl  brain_56.pkl  brain_57.pkl  brain_59.pkl  brain_6.pkl  brain_61.pkl  brain_68.pkl  brain_70.pkl  brain_71.pkl  brain_75.pkl  brain_77.pkl  brain_78.pkl  brain_8.pkl  brain_85.pkl  brain_86.pkl  brain_93.pkl  (+3 more)
models/gen0/: brain_1.pkl  brain_10.pkl  brain_100.pkl  brain_1000.pkl  brain_1001.pkl  brain_1002.pkl  brain_1003.pkl  brain_1004.pkl  brain_1005.pkl  brain_1006.pkl  brain_1007.pkl  brain_1008.pkl  brain_1009.pkl  brain_101.pkl  brain_1010.pkl  brain_1011.pkl  brain_1012.pkl  brain_1013.pkl  brain_1014.pkl  brain_1015.pkl  brain_102.pkl  brain_103.pkl  brain_104.pkl  brain_105.pkl  brain_106.pkl  brain_107.pkl  brain_108.pkl  brain_109.pkl  brain_11.pkl  brain_110.pkl  brain_111.pkl  brain_112.pkl  brain_113.pkl  brain_114.pkl  brain_115.pkl  brain_116.pkl  brain_117.pkl  brain_118.pkl  brain_119.pkl  brain_12.pkl  (+934 more)
